--- a/app/src/main/res/layout/activity_cart.xml
+++ b/app/src/main/res/layout/activity_cart.xml
@@ -7,11 +7,12 @@
         android:id="@+id/cart_recycler_view"
         android:layout_width="match_parent"
         android:layout_margin="4dp"
+        android:layout_alignParentTop="true"
+        android:layout_above="@+id/button_payment"
         android:layout_height="wrap_content"/>
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/cart_recycler_view"
         android:layout_centerHorizontal="true"
         android:layout_alignParentBottom="true"
         style="@style/Base.Widget.AppCompat.Button.Borderless"
