--- a/app/src/main/res/layout/cart_list_item.xml
+++ b/app/src/main/res/layout/cart_list_item.xml
@@ -61,10 +61,9 @@
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
             android:layout_gravity="center_vertical"
-            android:layout_marginBottom="8dp"
-            android:layout_marginLeft="8dp"
+            android:layout_marginBottom="16dp"
             android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="16dp"
             android:src="@drawable/placeholder_cart" />
 
         <Button
@@ -77,6 +76,15 @@
             android:layout_marginEnd="16dp"
             android:text="+"
             android:textColor="@color/colorAccent"
+            android:textSize="12sp" />
+        <ImageButton
+            android:id="@+id/button_cart_delete"
+            android:layout_width="40dp"
+            android:layout_height="wrap_content"
+            style="@style/Base.Widget.AppCompat.Button.Borderless"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentTop="true"
+            android:src="@drawable/ic_clear_black_24dp"
             android:textSize="12sp" />
 
         <Button
