--- a/app/src/main/res/layout/activity_cart.xml
+++ b/app/src/main/res/layout/activity_cart.xml
@@ -22,6 +22,8 @@
         android:layout_height="wrap_content"
         android:textColor="@color/colorAccent"
         android:layout_centerHorizontal="true"
+        android:textSize="20sp"
+        android:layout_marginBottom="16dp"
         android:layout_alignParentBottom="true"
         style="@style/Base.Widget.AppCompat.Button.Borderless"
         android:id="@+id/button_payment"
