--- a/app/src/main/res/layout/activity_product.xml
+++ b/app/src/main/res/layout/activity_product.xml
@@ -92,7 +92,7 @@
                         android:textAlignment="center"
                         android:textAppearance="@style/Base.TextAppearance.AppCompat.Widget.ActionBar.Title"
                         android:textColor="@android:color/black"
-                        android:textSize="24sp"
+                        android:textSize="26sp"
                         tools:text="Nutritional Facts" />
 
                     <View
@@ -109,12 +109,12 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_horizontal"
+                        android:layout_marginBottom="16dp"
                         android:layout_marginLeft="8dp"
-                        android:layout_marginBottom="8dp"
                         android:layout_marginStart="8dp"
-                        android:textSize="22sp"
-                        android:textAppearance="@style/Base.Widget.AppCompat.ActionBar.Solid"
                         android:layout_marginTop="8dp"
+                        android:textAppearance="@style/Base.Widget.AppCompat.ActionBar.Solid"
+                        android:textSize="18sp"
                         tools:text="Calcium:50mg\nCalories:50kcal" />
 
                 </LinearLayout>
@@ -146,7 +146,7 @@
                         android:text="@string/purchase"
                         android:textAppearance="@style/Base.TextAppearance.AppCompat.Widget.ActionBar.Title"
                         android:textColor="@android:color/black"
-                        android:textSize="18sp" />
+                        android:textSize="26sp" />
 
                     <View
                         android:layout_width="match_parent"
@@ -157,23 +157,33 @@
                         android:layout_marginTop="4dp"
                         android:background="@android:color/black" />
 
-                    <TextView
-                        android:id="@+id/tv_price"
-                        android:layout_width="wrap_content"
+                    <LinearLayout
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_gravity="center_horizontal"
-                        android:padding="8dp"
-                        android:textAppearance="@style/Base.Widget.AppCompat.ActionBar.Solid"
-                        android:textSize="26sp" />
+                        android:orientation="horizontal">
 
-                    <TextView
-                        android:id="@+id/tv_stock_quantity"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center_horizontal"
-                        android:padding="8dp"
-                        android:textAppearance="@style/Base.Widget.AppCompat.ActionBar.Solid"
-                        android:textSize="22sp" />
+                        <TextView
+                            android:id="@+id/tv_price"
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="start"
+                            android:layout_marginTop="16dp"
+                            android:layout_weight="2"
+                            android:paddingStart="16dp"
+                            android:textAppearance="@style/Base.Widget.AppCompat.ActionBar.Solid"
+                            android:textSize="22sp" />
+
+                        <TextView
+                            android:id="@+id/tv_stock_quantity"
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="end"
+                            android:layout_marginTop="16dp"
+                            android:layout_weight="3"
+                            android:paddingEnd="16dp"
+                            android:textAppearance="@style/Base.Widget.AppCompat.ActionBar.Solid"
+                            android:textSize="22sp" />
+                    </LinearLayout>
 
                     <LinearLayout
                         android:layout_width="wrap_content"
@@ -184,20 +194,23 @@
                         <Button
                             android:id="@+id/button_quantity_minus"
                             style="@style/Base.Widget.AppCompat.Button.Borderless"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_margin="16dp"
+                            android:layout_width="60dp"
+                            android:layout_height="90dp"
+                            android:layout_margin="4dp"
                             android:text="-"
-                            android:textColor="@color/colorAccent"
                             android:textAppearance="@style/Base.Widget.AppCompat.ActionBar.Solid"
-                            android:textSize="22sp" />
+                            android:textColor="@color/colorAccent"
+                            android:textSize="28sp" />
 
                         <TextView
                             android:id="@+id/tv_quantity"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_margin="16dp"
+                            android:layout_margin="4dp"
+                            android:paddingStart="16dp"
+                            android:paddingEnd="16dp"
                             android:gravity="bottom"
+                            android:textSize="20sp"
                             android:text="1"
                             tools:text="5" />
 
@@ -205,13 +218,13 @@
                         <Button
                             android:id="@+id/button_quantity_plus"
                             style="@style/Base.Widget.AppCompat.Button.Borderless"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_margin="16dp"
+                            android:layout_width="60dp"
+                            android:layout_height="90dp"
+                            android:layout_margin="4dp"
                             android:text="+"
-                            android:textColor="@color/colorAccent"
                             android:textAppearance="@style/Base.Widget.AppCompat.ActionBar.Solid"
-                            android:textSize="20sp" />
+                            android:textColor="@color/colorAccent"
+                            android:textSize="28sp" />
 
                     </LinearLayout>
 
@@ -220,10 +233,12 @@
                         style="@style/Base.Widget.AppCompat.Button.Borderless"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:textColor="@color/colorAccent"
+                        android:layout_marginTop="16dp"
                         android:layout_gravity="center_horizontal"
                         android:layout_marginBottom="16dp"
-                        android:text="@string/add_to_cart" />
+                        android:text="@string/add_to_cart"
+                        android:textColor="@color/colorAccent"
+                        android:textSize="20sp" />
 
                 </LinearLayout>
             </android.support.v7.widget.CardView>
